--- a/Index.html
+++ b/Index.html
@@ -2,18 +2,25 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Our Menu</title>
+<title>Lorem ipsum</title>
 <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
-<h1>Our Menu</h1>
-
-<div>
-  <p id="p1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia distinctio aliquid cupiditate perferendis fuga, sit quasi alias vero sunt non, ratione earum dolores nihil! Consequuntur pariatur totam incidunt soluta expedita.</p>
-  <p id="p2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta beatae voluptatibus veniam placeat iure unde assumenda porro neque voluptate esse sit magnam facilis labore odit, provident a ea! Nulla, minima.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius nemo vitae, cupiditate odio magnam reprehenderit esse eum reiciendis repellendus incidunt sequi! Autem, laudantium, accusamus. Doloribus tempora alias minima laborum, provident!</p>
-  <p id="p3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia distinctio aliquid cupiditate perferendis fuga, sit quasi alias vero sunt non, ratione earum dolores nihil! Consequuntur pariatur totam incidunt soluta expedita.</p>
+<h1>Lorem ipsum</h1>
+<div class="row">
+	<div class="col-lg-4 col-md-6 col-sm-12">
+	<h3 id="title1">Lorem</h3>	
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia distinctio aliquid cupiditate perferendis fuga, sit quasi alias vero sunt non, ratione earum dolores nihil! Consequuntur pariatur totam incidunt soluta expedita.</p></div>
+  	
+  	<div class="col-lg-4 col-md-6 col-sm-12">
+	<h3 id="title2">Sunt</h3>	
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia distinctio aliquid cupiditate perferendis fuga, sit quasi alias vero sunt non, ratione earum dolores nihil! Consequuntur pariatur totam incidunt soluta expedita.</p>
+	</div>
+	
+	<div class="col-lg-4 col-md-12 col-sm-12">
+	<h3 id="title3">Alias</h3>	
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia distinctio aliquid cupiditate perferendis fuga, sit quasi alias vero sunt non, ratione earum dolores nihil! Consequuntur pariatur totam incidunt soluta expedita.</p>
+	</div>
  </div>
-
-
 </body>
 </html>
